--- a/overlays/local/kustomization.yaml
+++ b/overlays/local/kustomization.yaml
@@ -1,6 +1,3 @@
 namespace: mlflow
 resources:
-- ../../base/deployment.yaml
-- ../../base/service.yaml
-- ../../base/ingress.yaml
-- ../../base/namespace.yaml
+- ../../base
