--- a/base/kustomization.yaml
+++ b/base/kustomization.yaml
@@ -2,7 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-- deployment.yaml
-- service.yaml
-- ingress.yaml
+- mlflow/deployment.yaml
+- mlflow/service.yaml
+- mlflow/ingress.yaml
 - namespace.yaml
