--- a/base/mlflow/deployment.yaml
+++ b/base/mlflow/deployment.yaml
@@ -20,7 +20,7 @@ spec:
           - server
           - --host=0.0.0.0
           - --port=5000
-          - --backend-store-uri=sqlite:///mlflow.db
+          - --backend-store-uri=postgresql://$(POSTGRES_USER):$(POSTGRES_PASSWORD)@postgres:5432/$(POSTGRES_DB)
           - --default-artifact-root=/mlruns
         ports:
           - containerPort: 5000
