--- a/base/mlflow/deployment.yaml
+++ b/base/mlflow/deployment.yaml
@@ -15,13 +15,15 @@ spec:
       containers:
       - name: mlflow
         image: ghcr.io/mlflow/mlflow:v2.10.0
+        command: ["/bin/bash", "-c"]
         args:
-          - mlflow
-          - server
-          - --host=0.0.0.0
-          - --port=5000
-          - --backend-store-uri=postgresql://$(POSTGRES_USER):$(POSTGRES_PASSWORD)@postgres:5432/$(POSTGRES_DB)
-          - --default-artifact-root=/mlruns
+          - |
+            pip install --no-cache-dir psycopg2-binary && \
+            mlflow server \
+              --host=0.0.0.0 \
+              --port=5000 \
+              --backend-store-uri=postgresql://$(POSTGRES_USER):$(POSTGRES_PASSWORD)@postgres:5432/$(POSTGRES_DB) \
+              --default-artifact-root=/mlruns
         ports:
           - containerPort: 5000
         resources:
