--- a/base/mlflow/deployment.yaml
+++ b/base/mlflow/deployment.yaml
@@ -22,7 +22,7 @@ spec:
             mlflow server \
               --host=0.0.0.0 \
               --port=5000 \
-              --backend-store-uri=postgresql://$(POSTGRES_USER):$(POSTGRES_PASSWORD)@postgres:5432/$(POSTGRES_DB) \
+              --backend-store-uri=postgresql://$POSTGRES_USER:$POSTGRES_PASSWORD@postgres:5432/$POSTGRES_DB \
               --default-artifact-root=/mlruns
         ports:
           - containerPort: 5000
