connected mino to mlflow

--- a/base/minio/secret.yaml
+++ b/base/minio/secret.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: minio-secret
+  name: minio-creds
 type: Opaque
 stringData:
   MINIO_ROOT_USER: minioadmin
