--- a/base/mlflow/deployment.yaml
+++ b/base/mlflow/deployment.yaml
@@ -23,12 +23,26 @@ spec:
               --host=0.0.0.0 \
               --port=5000 \
               --backend-store-uri=postgresql://$POSTGRES_USER:$POSTGRES_PASSWORD@postgres:5432/$POSTGRES_DB \
-              --default-artifact-root=/mlruns
         ports:
           - containerPort: 5000
         envFrom:
           - secretRef:
               name: postgres-secret
+          - configMapRef:
+              name: mlflow-config
+          - secretRef:
+              name: minio-creds
+        env:
+          - name: AWS_ACCESS_KEY_ID
+            valueFrom:
+              secretKeyRef:
+                name: minio-creds
+                key: MINIO_ROOT_USER
+          - name: AWS_SECRET_ACCESS_KEY
+            valueFrom:
+              secretKeyRef:
+                name: minio-creds
+                key: MINIO_ROOT_PASSWORD
         resources:
           requests:
             memory: 512Mi
