--- a/overlays/local/minio-bucket-job.yaml
+++ b/overlays/local/minio-bucket-job.yaml
@@ -14,12 +14,12 @@ spec:
         - name: MINIO_ACCESS_KEY
           valueFrom:
             secretKeyRef:
-              name: minio-secret
+              name: minio-creds
               key: MINIO_ROOT_USER
         - name: MINIO_SECRET_KEY
           valueFrom:
             secretKeyRef:
-              name: minio-secret
+              name: minio-creds
               key: MINIO_ROOT_PASSWORD
         command:
         - /bin/sh
