--- a/base/mlflow/deployment.yaml
+++ b/base/mlflow/deployment.yaml
@@ -23,6 +23,8 @@ spec:
               --host=0.0.0.0 \
               --port=5000 \
               --backend-store-uri=postgresql://$POSTGRES_USER:$POSTGRES_PASSWORD@postgres:5432/$POSTGRES_DB \
+              --serve-artifacts
+              --artifacts-destination $MLFLOW_ARTIFACT_ROOT
         ports:
           - containerPort: 5000
         envFrom:
