--- a/base/mlflow/deployment.yaml
+++ b/base/mlflow/deployment.yaml
@@ -18,7 +18,7 @@ spec:
         command: ["/bin/bash", "-c"]
         args:
           - |
-            pip install --no-cache-dir psycopg2-binary && \
+            pip install --no-cache-dir psycopg2-binary boto3 && \
             mlflow server \
               --host=0.0.0.0 \
               --port=5000 \
